partial homepage edits

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -12,7 +12,7 @@
     <body>
         <div id="header">
             <div id="title">Map of Life</div>
-            <div id="subtitle">integrating species knowledge infrastructure</div>
+            <div id="subtitle">integrating species distribution knowledge</div>
             <div id="menu">
                 <div class="item"><a href="/" >Home</a></div>
                 <div class="item" id="techLink"><a href="/tech.html">Tech</a></div>
