--- a/homepage/index.html
+++ b/homepage/index.html
@@ -77,7 +77,7 @@
     <body>
         <div id="header">
             <div id="title">Map of Life</div>
-            <div id="subtitle">integrating species knowledge infrastructure</div>
+            <div id="subtitle">integrating species distribution knowledge</div>
             <div id="menu">
                 <div class="item"><a href="/" class="current">Home</a></div>
                 <div class="item" id="techLink"><a href="/tech.html">Tech</a></div>
@@ -90,7 +90,8 @@
                     <div class="topQuote"> 
                         By bringing together all types of information about species 
                         distributions, providing model-based integration,
-                        and providing a system for users build upon our knowledge, 
+                        and providing a system for
+users to build upon our knowledge, 
                         the Map of Life project hopes to support our community in 
                         understanding and saving the world's biodiversity.
                         <span class="aboutLink"><a href="/about.html">more about MOL</a></span>
@@ -104,10 +105,9 @@
                     <img class="placemark big" src="/images/placemark.png">
                     <span class="horizontalDivider"></span>
                     <div class="middleQuote">
-                        The end result will be a knowledge-base of initially tens 
-                        and ultimately hundreds of thousands of species distribution 
-                        maps, along with a set of tools for querying, accessing, 
-                        modifying, downloading and summarizing them.
+                        The result will ultimately be a knowledge-base and platform for
+                        species distribution map development, along with a set of tools for
+                        querying, accessing, downloading and summarizing them.
                     </div>
                 </div>
                 <div id="content">
@@ -131,7 +131,7 @@
                                 <div class="pretitle">HIGHLIGHT</div>
                                 <div class="title">CODE DEVELOPMENT</div>
                                 <div class="description">
-                                    For those of you in the code-development community, 
+                                    For those of you in the code development community, 
                                     MOL is a fully open-source project. Feel free to watch 
                                     and discuss our progress.
                                 </div>
