--- a/homepage/people.html
+++ b/homepage/people.html
@@ -12,7 +12,7 @@
     <body>
         <div id="header">
             <div id="title">Map of Life</div>
-            <div id="subtitle">integrating species knowledge infrastructure</div>
+            <div id="subtitle">integrating species distribution knowledge</div>
             <div id="menu">
                 <div class="item"><a href="/" >Home</a></div>
                 <div class="item" id="techLink"><a href="/tech.html">Tech</a></div>
@@ -27,16 +27,17 @@
                             <img class="right" src="/images/people/walter.jpg">
                             <div class="name">Walter Jetz</div>
                             <div class="description">
-                                Walter's work is interdisciplinary and combines elements of biogeography, 
+                                Walter is broadly interested in global biodiversity science. His 
+                                research is interdisciplinary and combines elements of biogeography, 
                                 community ecology, landscape ecology, macroecology, global change 
-                                ecology, evolution, comparative biology, biodiversity informatics 
-                                and conservation. We use mostly terrestrial vertebrates and plants 
-                                as study systems. In its sum, our research attempts to integrate 
-                                across scales of geography and ecological organization - from global 
-                                to local assemblages.
+                                ecology, evolutionary and comparative biology, biodiversity informatics 
+                                and conservation. Study systems include terrestrial vertebrates, in 
+                                particular birds, and plants. Work in his research group attempts to 
+                                integrate across scales of geographical, phylogenetic and ecological 
+                                organization.
                             </div>
                             <div class="links">
-                                <a href="http://http//www.yale.edu/jetz/">Walter's Homepage</a>
+                                <a href="http://www.yale.edu/jetz/">Walter's Homepage</a>
                             </div>
                         </div>
                         <div class="person top">
@@ -60,6 +61,11 @@
                             <img src="/images/people/john.jpg">
                             <div class="name">John Wieczorek</div>
                             <div class="description">
+                                John supports his habits (beach volleyball and living in the 
+                                wilderness) by balancing biodiversity informatics at UC Berkeley with
+                                indentured servitude to the Lacey lab for field work in Argnentina.
+                                Informatics interests include biodiversity data mobilization, data
+                                quality improvement, and georeferencing.
                             </div>
                             <div class="links">
                                 <a href="">John's Homepage</a>
