--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -11,7 +11,7 @@
     <body>
         <div id="header">
             <div id="title">Map of Life</div>
-            <div id="subtitle">integrating species knowledge infrastructure</div>
+            <div id="subtitle">integrating species distribution knowledge</div>
             <div id="menu">
                 <div class="item"><a href="/" >Home</a></div>
                 <div class="item" id="techLink" ><a class="current" href="/tech.html">Tech</a></div>
