search ui in place

--- a/app/static/search.html
+++ b/app/static/search.html
@@ -2,7 +2,7 @@
 <html> 
   <head> 
     <style>
-.mol-TopLeftController{
+.mol-TopLeftControl{
     margin-top: 5px;
 	width: 550px;
     font-family: Arial, sans-serif;
@@ -14,7 +14,7 @@
         <link href="/css/widgets.css" media="screen" rel="stylesheet" type="text/css" /> 
   </head>
   <body>
-  <div class="mol-TopLeftController">
+  <div class="mol-TopLeftControl">
    <div class="mol-LayerControl-Search widgetTheme">
       <div class="title">Search:</div>
       <input class="value" type="text" />
