people page tweaks

--- a/homepage/people.html
+++ b/homepage/people.html
@@ -25,7 +25,7 @@
                     <div class="wrapper">
                         <div class="person top">
                             <img class="right" src="/images/people/walter.jpg">
-                            <div class="name">Walter Jetz</div>
+                            <div class="name"><a href="http://www.yale.edu/jetz/">Walter Jetz</a></div>
                             <div class="description">
                                 Walter is broadly interested in global biodiversity science. His 
                                 research is interdisciplinary and combines elements of biogeography, 
@@ -36,13 +36,10 @@
                                 integrate across scales of geographical, phylogenetic and ecological 
                                 organization.
                             </div>
-                            <div class="links">
-                                <a href="http://www.yale.edu/jetz/">Walter's Homepage</a>
-                            </div>
                         </div>
                         <div class="person top">
                             <img src="/images/people/rob.jpg">
-                            <div class="name">Robert Guralnick</div>
+                            <div class="name"><a href="https://sites.google.com/site/robgur/">Robert Guralnick</a></div>
                             <div class="description">
                                 Rob is a biodiversity scientist who studies spatiotemporal 
                                 changes in genetic and species diversity. I take an integrative 
@@ -53,9 +50,6 @@
                                 ones that require multiple lines of evidence.  Rob hobbies are working 
                                 and biking.
                             </div>
-                            <div class="links">
-                                <a href="https://sites.google.com/site/robgur/">Rob's Homepage</a>
-                            </div>
                         </div>
                         <div class="person">
                             <img src="/images/people/john.jpg">
@@ -65,46 +59,39 @@
                                 wilderness) by balancing biodiversity informatics at UC Berkeley with
                                 indentured servitude to the Lacey lab for field work in Argnentina.
                                 Informatics interests include biodiversity data mobilization, data
-                                quality improvement, and georeferencing.
-                            </div>
-                            <div class="links">
-                                <a href="">John's Homepage</a>
+                                quality improvement, and georeferencing. <p></p>
                             </div>
                         </div>
                         <div class="person">
-                            <img src="/images/people/dan.jpg">
+                            <img class="right" src="/images/people/dan.jpg">
                             <div class="name">Dan Rosauer</div>
                             <div class="description">
-                            </div>
-                            <div class="links">
-                                <a href="">Dan's Homepage</a>
+                                Dan is a postdoc in the Jetz lab at Yale. His research integrates broad 
+                                scale spatial and phylogenetic data and uses novel techniques to tackle 
+                                questions about the evolution, distribution and conservation of biological 
+                                diversity. Dan is passionate about road cycling, 
+                                fried haloumi and the use of phylogenetic information in conservation planning.
                             </div>
                         </div>
                         <div class="person">
                             <img src="/images/people/aaron.jpg">
-                            <div class="name">Aaron Steele</div>
+                            <div class="name"><a href="http://aaron.io">Aaron Steele</a></div>
                             <div class="description">
                                 Aaron got a CS degree from Berkeley and currently works there as an
                                 information architect. When not running or running after Noah, he
                                 helps design and write code for MOL web apps, servers, and APIs. Aaron
                                 enjoys reading self-introductions written in the third person.
                             </div>
-                            <div class="links">
-                                <a href="http://aaron.io">Aaron's Homepage</a>
-                            </div>
                         </div>
                         <div class="person">
                             <img class="right" src="/images/people/andrew.jpg">
-                            <div class="name">Andrew Hill</div>
+                            <div class="name"><a href="http://biodiversity.colorado.edu">Andrew Hill</a></div>
                             <div class="description">
                                 Andrew is working on his Ph.D. in the Guralnick lab where he has been 
                                 since the mid-2000's. 
                                 Most of his work revolves around an enthusiasm for automated 
                                 informatics frameworks to help understand the world's biodiversity. 
                                 He has an affinity for caffiene and mostly avoids sunlight.
-                            </div>
-                            <div class="links">
-                                <a href="http://biodiversity.colorado.edu">Andrew's Homepage</a>
                             </div>
                         </div>
                     </div>
