--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -103,10 +103,19 @@
                 <h2 id="dataDelivery">Data delivery</h2>
                 <div class="overview">
                     <p>
-                        Data delivery has been optimized by relying on the various tiers of data storage. Any data requested from MOL is immediately cached on the front-end server for a limited period of time. This makes frequently requested data delivered as quickly as possible. Alternatively, data that is rarely requested remains on the back end until its first request, freeing up space in the front-end application.
+                        Data delivery has been optimized by relying on the various tiers of data storage. 
+                        Any data requested from MOL is immediately cached on the front-end server for a 
+                        limited period of time. This makes frequently requested data delivered as quickly 
+                        as possible. Alternatively, data that is rarely requested remains on the back end 
+                        until its first request, freeing up space in the front-end application.
                     </p>
                     <p>
-                        Many components of data are better managed by projects outside MOL.For example, the Global Biodiversity Information Facility (GBIF) has a long history of making point occurrence data across numerous international collections accessible across the web. MOL relies on web-services made available by GBIF, which is temporarily cached on the front end server to increase speed and reliability.   The cached data is then displayed in the MOL user-interface.
+                        Many components of data are better managed by projects outside MOL. For example, 
+                        the Global Biodiversity Information Facility (GBIF) has a long history of making 
+                        point occurrence data across numerous international collections accessible across 
+                        the web. MOL relies on web-services made available by GBIF, which is temporarily 
+                        cached on the front end server to increase speed and reliability.   The cached data 
+                        is then displayed in the MOL user-interface.
                     </p>
                 </div>
                 <div class="links">
@@ -120,7 +129,17 @@
                 <h2>Management</h2>
                 <div class="overview">
                     <p>
-                        MOL has diverse management challenges, from managing users and user privileges, managing user-provided quality-flags and data, to managing metadata about data sets and processes run for the MOL users. Every aspect of data management relies on those technological solutions outlined above, primarily scalability and delivery. MOL is exposing all data and metadata through a growing set of web-services that support discovery and data access. By doing so, MOL hopes to allow any user or application to utilize the outputs of the MOL project. While MOL is developing a user-interface that is targeted at expert and amateur users who can enhance the quality of species range data, the MOL team hopes that numerous positive (often unpredictable) outcomes will arise by encouraging other projects to build upon this set of data and tools.
+                        MOL has diverse management challenges, from managing users and user privileges, 
+                        managing user-provided quality-flags and data, to managing metadata about data 
+                        sets and processes run for the MOL users. Every aspect of data management relies 
+                        on those technological solutions outlined above, primarily scalability and 
+                        delivery. MOL is exposing all data and metadata through a growing set of web-services 
+                        that support discovery and data access. By doing so, MOL hopes to allow any user or 
+                        application to utilize the outputs of the MOL project. While MOL is developing a 
+                        user-interface that is targeted at expert and amateur users who can enhance the 
+                        quality of species range data, the MOL team hopes that numerous positive (often 
+                        unpredictable) outcomes will arise by encouraging other projects to build upon 
+                        this set of data and tools.
                     </p>
                 </div>
                 <div class="links">
@@ -141,15 +160,15 @@
                     <p>
                         Although development is in very early stages, some elements of the user interface 
                         have some prototypes in place. For example, you can visualize an IUCN range map with 
-                        points discovered through GBIF for the jaguar (Panthera onca) 
-                        <a href='http://prototype.mol-lab.appspot.com/map/animalia/species/panthera_onca'>here</a>.
+                        points discovered through GBIF 
+                        <a href='/images/demo/range.png'>here</a>.
                         Note that only for some GBIF data we are currently (in red) visualizing 
                         spatial uncertainty of points, something that will (in a modeled/probabilistic way) 
                         be extended to all points. Of course users will be able to filter by year 
                         range, data provider etc. In the coming months we will add several 
                         other distribution data types and include expert maps for other vertebrate groups.
                         You can further explore some preliminary data by using the MOL search tool, 
-                        <a href='http://prototype.mol-lab.appspot.com/search'>here</a>.
+                        <a href='/images/demo/search.png'>here</a>.
                     </p>
                 </div>
                 <div class="links">
