search page wired

--- a/homepage/people.html
+++ b/homepage/people.html
@@ -57,14 +57,14 @@
                             <div class="description">
                                 John supports his habits (beach volleyball and living in the 
                                 wilderness) by balancing biodiversity informatics at UC Berkeley with
-                                indentured servitude to the Lacey lab for field work in Argnentina.
+                                indentured servitude to the Lacey lab for field work in Argentina.
                                 Informatics interests include biodiversity data mobilization, data
                                 quality improvement, and georeferencing. <p></p>
                             </div>
                         </div>
                         <div class="person">
                             <img class="right" src="/images/people/dan.jpg">
-                            <div class="name">Dan Rosauer</div>
+                            <div class="name"><a href="http://pantheon.yale.edu/~dr426/">Dan Rosauer</a></div>
                             <div class="description">
                                 Dan is a postdoc in the Jetz lab at Yale. His research integrates broad 
                                 scale spatial and phylogenetic data and uses novel techniques to tackle 
