--- a/app/html/demo.html
+++ b/app/html/demo.html
@@ -43,7 +43,7 @@
                     <div class="wrapper">
                         <div class="demoCol">
                             <div class="image">
-                                <a href="/images/demo/range.png"><img src="/static/demo/range-thumb.png" ></a>
+                                <a href="/static/demo/range.png"><img src="/static/demo/range-thumb.png" ></a>
                             </div>
                             <div class="caption">
                                 Range Maps: One of the primary forms of data in MOL is the species range map. 
@@ -53,7 +53,7 @@
                         </div>
                         <div class="demoCol">
                             <div class="image">
-                                <a href="/images/demo/search.png"><img src="/static/demo/search-thumb.png" ></a>
+                                <a href="/static/demo/search.png"><img src="/static/demo/search-thumb.png" ></a>
                             </div>
                             <div class="caption">
                                 Search: The diversity of data MOL plans to make available for mapping and 
@@ -63,7 +63,7 @@
                         </div>
                         <div class="demoCol">
                             <div class="image">
-                                <a href="/images/demo/ui.png"><img src="/static/demo/ui-thumb.png"></a>
+                                <a href="/static/demo/ui.png"><img src="/static/demo/ui-thumb.png"></a>
                             </div>
                             <div class="caption">
                                 A big part of MOL will be a web-interface to access maps, analysis results, 
