--- a/app/html/home.html
+++ b/app/html/home.html
@@ -63,12 +63,12 @@
                 $('#blog').gFeed({ 
                     url: 'http://mappinglife.wordpress.com/feed/',
                     tabs: false,
-                    max: 3
+                    max: 4
                 }); 
                 $('#code').gFeed({ 
                     url: 'https://github.com/andrewxhill/MOL/commits/master.atom',
                     tabs: false,
-                    max: 6
+                    max: 4
                 }); 
             });
         </script>
@@ -141,6 +141,10 @@
                 </div>
             </div>
         <div id="footer"> 
+            <div id="footer_imgs">
+                <img src="/static/home/nsf.png">
+                <img src="/static/home/eol.png">
+            </div>
             <div id="footer_links"> 
                 <a href="/">Home</a>
                 <a href="/about">About</a>
