--- a/app/html/people.html
+++ b/app/html/people.html
@@ -57,14 +57,14 @@
                             <div class="description">
                                 John supports his habits (beach volleyball and living in the 
                                 wilderness) by balancing biodiversity informatics at UC Berkeley with
-                                indentured servitude to the Lacey lab for field work in Argnentina.
+                                indentured servitude to the Lacey lab for field work in Argentina.
                                 Informatics interests include biodiversity data mobilization, data
                                 quality improvement, and georeferencing. <p></p>
                             </div>
                         </div>
                         <div class="person">
                             <img class="right" src="/static/people/dan.jpg">
-                            <div class="name">Dan Rosauer</div>
+                            <div class="name"><a href="http://pantheon.yale.edu/~dr426/">Dan Rosauer</a></div>
                             <div class="description">
                                 Dan is a postdoc in the Jetz lab at Yale. His research integrates broad 
                                 scale spatial and phylogenetic data and uses novel techniques to tackle 
@@ -88,10 +88,46 @@
                             <div class="name"><a href="http://biodiversity.colorado.edu">Andrew Hill</a></div>
                             <div class="description">
                                 Andrew is working on his Ph.D. in the Guralnick lab where he has been 
-                                since the mid-2000's. 
-                                Most of his work revolves around an enthusiasm for developing automated 
-                                informatics frameworks to help understand the world's biodiversity. 
-                                He has an affinity for caffiene and mostly avoids sunlight.
+                                since the mid-2000's. Most of his work revolves around an enthusiasm 
+                                for developing automated informatics frameworks to help understand the 
+                                world's biodiversity. He has an affinity for caffiene and mostly avoids 
+                                sunlight.
+                            </div>
+                        </div>
+                        <div class="person">
+                            <img src="/static/people/aimee.jpg">
+                            <div class="name">Aimee Stewart</div>
+                            <div class="description">
+                                Aimee has worked 
+                                in the GIS and Remote Sensing fields for the last 12 years, focusing on 
+                                software development and mapping applications the University of Kansas since 2001. After 
+                                her initial seduction by proprietary software, she came to her senses and 
+                                now uses open source tools whenever possible.
+                            </div>
+                        </div>
+                        <div class="person">
+                            <div class="name">EOL-BioSync Working Group</div>
+                            <div class="description full">
+                                <p>Map of Life was fortunate to have many talented individuals 
+                                contribute to the early ideas, scope, and direction of the project. 
+                                Below we list some of those contributors, </p>
+                                Jim Beach, 
+                                Javier de la Torre, 
+                                Ron Eastman, 
+                                Simon Ferrier, 
+                                Philip Goldstein, 
+                                Brian McGill, 
+                                Cyndy Parr, 
+                                David Patterson, 
+                                Steven Phillips,
+                                Thiago Rangel, 
+                                Tim Robertson, 
+                                Florencia Sangermano, 
+                                Woody Turner, 
+                                Dave Vieglais, 
+                                Mark Westneat, 
+                                Cyndy Parr, 
+                                Jana McPherson
                             </div>
                         </div>
                     </div>
