--- a/app/static/layers.html
+++ b/app/static/layers.html
@@ -22,16 +22,22 @@
             <div class="widgetTheme add button">Add</div>
         </div>
         <div class="mol-LayerControl-Layers ">
-            <div id="points_GBIF_Puma_concolor" class="layer widgetTheme">
-                <div class="layerToggle">
-                    <input type="radio" name="active-layer">
-                </div>
+            <div id="points_GBIF_Puma_concolor" class="layer widgetTheme selected">
+                <button><img class="type" src="/static/maps/search/points.png"></button>
                 <div class="layerName">
                     <div class="layerNomial">Smilisca puma</div>
                     <div class="layerAuthor">A. Steele</div>
                 </div>
                 <input class="toggle" type="checkbox">
-                <button class="source"><img class="source" src="/static/maps/search/GBIF.png"></button>
+                <button class="info">i</button>
+            </div>
+            <div id="points_GBIF_Puma_concolor" class="layer widgetTheme">
+                <button><img class="type" src="/static/maps/search/range.png"></button>
+                <div class="layerName">
+                    <div class="layerNomial">Smilisca puma</div>
+                    <div class="layerAuthor">A. Steele</div>
+                </div>
+                <input class="toggle" type="checkbox">
                 <button class="info">i</button>
             </div>
         </div>
