homepage fixes and proj fixes in tiling app

--- a/app/html/home.html
+++ b/app/html/home.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html> 
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
+        <META http-equiv="Content-Type" CONTENT="text/html; charset=UTF-8" /> 
+        <META NAME="Description" CONTENT="A knowledge-base and platform for species distribution map development.">
+        <META NAME="keywords" CONTENT="map, biodiversity, species, distribution, knowledge" />
+        <meta name="google-site-verification" content="pZrZcT4jdB76onBTxpbhRGSkIonOimgCj8Wk2jflnZ8" />
         <title>Map of Life</title> 
         <link href="/css/style.css" media="screen" rel="stylesheet" type="text/css" /> 
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Coda">
@@ -140,19 +143,33 @@
                     </div>
                 </div>
             </div>
-        <div id="footer"> 
-            <div id="footer_imgs">
-                <img src="/static/home/nsf.png">
-                <img src="/static/home/eol.png">
-            </div>
-            <div id="footer_links"> 
-                <a href="/">Home</a>
-                <a href="/about">About</a>
-                <a href="http://mappinglife.wordpress.com/">Blog</a>
-                <a href="http://www.yale.edu/jetz/">Jetz Lab</a>
-                <a href="http://sites.google.com/site/robgur/">Guralnick Lab</a>
-                <a href="http://github.com/andrewxhill/MOL">GitHub</a>
-            </div> 
-        </div> 
+<div id="footer"> 
+    <div id="footer_imgs">
+        <img src="/static/home/nsf.png">
+        <img src="/static/home/eol.png">
+    </div>
+    <div id="footer_links"> 
+        <a href="/">Home</a>
+        <a href="/about.html">About</a>
+        <a href="http://mappinglife.wordpress.com/">Blog</a>
+        <a href="http://www.yale.edu/jetz/">Jetz Lab</a>
+        <a href="http://sites.google.com/site/robgur/">Guralnick Lab</a>
+        <a href="http://github.com/andrewxhill/MOL">GitHub</a>
+    </div> 
+</div> 
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-22650023-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
     </body>
 </html>      
