--- a/homepage/about.html
+++ b/homepage/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
-        <title>Map of Life</title> 
+        <title>About</title> 
         <link href="/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" /> 
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Coda">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
