--- a/homepage/people.html
+++ b/homepage/people.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
-        <title>Map of Life</title> 
+        <title>People</title> 
         <link href="/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" /> 
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Coda">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
@@ -97,15 +97,29 @@
                     </div>
                 </div>
             </div>
-        <div id="footer"> 
-            <div id="footer_links"> 
-                <a href="/">Home</a>
-                <a href="/about.html">About</a>
-                <a href="http://mappinglife.wordpress.com/">Blog</a>
-                <a href="http://http://www.yale.edu/jetz/">Jetz Lab</a>
-                <a href="http://sites.google.com/site/robgur/">Guralnick Lab</a>
-                <a href="http://github.com/andrewxhill/MOL">GitHub</a>
-            </div> 
-        </div> 
+<div id="footer"> 
+    <div id="footer_links"> 
+        <a href="/">Home</a>
+        <a href="/about.html">About</a>
+        <a href="http://mappinglife.wordpress.com/">Blog</a>
+        <a href="http://www.yale.edu/jetz/">Jetz Lab</a>
+        <a href="http://sites.google.com/site/robgur/">Guralnick Lab</a>
+        <a href="http://github.com/andrewxhill/MOL">GitHub</a>
+    </div> 
+</div> 
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-22650023-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
     </body>
 </html>      
