new request based tiling for ranges

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -57,6 +57,8 @@
                                 <a href="http://catalogueoflife.org">Catalogue of Life</a>
                                 <a href="http://iucn.org">International Union for Conservation of Nature</a>
                                 <a href="http://protectedplanet.net">Protected Planet</a>
+                                <a href="http://mapnik.org/">Mapnik</a>
+                                <a href="http://amphibiaweb.org/">AmphibiaWeb</a>
                             </div>
                         </div>
                         <div class="products">
@@ -80,7 +82,7 @@
         <div id="footer"> 
             <div id="footer_links"> 
                 <a href="/">Home</a>
-                <a href="/about.html">About</a>
+                <a href="/about">About</a>
                 <a href="http://mappinglife.wordpress.com/">Blog</a>
                 <a href="http://www.yale.edu/jetz/">Jetz Lab</a>
                 <a href="http://sites.google.com/site/robgur/">Guralnick Lab</a>
