--- a/homepage/people.html
+++ b/homepage/people.html
@@ -100,7 +100,7 @@
 <div id="footer"> 
     <div id="footer_links"> 
         <a href="/">Home</a>
-        <a href="/about.html">About</a>
+        <a href="/about">About</a>
         <a href="http://mappinglife.wordpress.com/">Blog</a>
         <a href="http://www.yale.edu/jetz/">Jetz Lab</a>
         <a href="http://sites.google.com/site/robgur/">Guralnick Lab</a>
