lots of little ui clean-up

--- a/app/static/layers.html
+++ b/app/static/layers.html
@@ -13,7 +13,7 @@
     </style>
         <link href="/css/widgets.css" media="screen" rel="stylesheet" type="text/css" /> 
   </head>
-  <body>
+  <body style="background-color:white;">
   <div class="mol-Map-RightControl">
     <div class="TOP">
         <div class="mol-LayerControl-Menu ">
@@ -28,7 +28,10 @@
                     <div class="layerNomial">Smilisca puma</div>
                     <div class="layerAuthor">A. Steele</div>
                 </div>
-                <input class="toggle" type="checkbox">
+                <div class="buttonContainer"> 
+                    <input class="toggle" type="checkbox">
+                    <span class="customCheck"></span> 
+                </div>
                 <button class="info">i</button>
             </div>
             <div id="points_GBIF_Puma_concolor" class="layer widgetTheme">
@@ -37,7 +40,10 @@
                     <div class="layerNomial">Smilisca puma</div>
                     <div class="layerAuthor">A. Steele</div>
                 </div>
-                <input class="toggle" type="checkbox">
+                <div class="buttonContainer"> 
+                    <input class="toggle" type="checkbox">
+                    <span class="customCheck"></span> 
+                </div>
                 <button class="info">i</button>
             </div>
         </div>
