aaron steele, the prolific systematist, is no longer

--- a/app/static/layers.html
+++ b/app/static/layers.html
@@ -25,8 +25,7 @@
             <div id="points_GBIF_Puma_concolor" class="layer widgetTheme selected">
                 <button><img class="type" src="/static/maps/search/points.png"></button>
                 <div class="layerName">
-                    <div class="layerNomial">Smilisca puma</div>
-                    <div class="layerAuthor">A. Steele</div>
+                    <div class="layerNomial">Smilisca puma of the great blue yonder over there</div>
                 </div>
                 <div class="buttonContainer"> 
                     <input class="toggle" type="checkbox">
@@ -37,8 +36,7 @@
             <div id="points_GBIF_Puma_concolor" class="layer widgetTheme">
                 <button><img class="type" src="/static/maps/search/range.png"></button>
                 <div class="layerName">
-                    <div class="layerNomial">Smilisca puma</div>
-                    <div class="layerAuthor">A. Steele</div>
+                    <div class="layerNomial">Smilisca puma </div>
                 </div>
                 <div class="buttonContainer"> 
                     <input class="toggle" type="checkbox">
